--- a/res/layout/list_row.xml
+++ b/res/layout/list_row.xml
@@ -14,7 +14,8 @@
          	  <ImageView
 	            android:id="@+id/icon"
 	            android:padding="2dip"
-	            android:background="#ffffff"/>
+	            android:background="#ffffff"
+	            android:layout_gravity="left" />
 	     	  <TextView
 	            android:id="@+id/description"
 	            android:padding="2dip"
@@ -22,7 +23,8 @@
 	            android:width="0dip"
 	            android:textColor="#000000"
 	            android:singleLine="false"
-	            android:background="#ffffff"/>
+	            android:background="#ffffff"
+	            android:gravity="left" />
         </TableRow>
     </TableLayout>
 </LinearLayout>
